# AAUGuessr

./: LICENSE  README.md
backend/: Cargo.toml  rocket.toml
backend/database/: AAUGuessr.sql
backend/src/: main.rs
backend/src/db/: connection.rs
backend/src/models/: auth_schema.rs  mod.rs  user_schema.rs
backend/src/routes/: auth_routes.rs  user_routes.rs
backend/src/structures/: auth_structures.rs  default.rs  mod.rs  user_structures.rs
backend/src/utils/: auth.rs  client_ip.rs  mod.rs  server_error_handling.rs
frontend/: .gitignore  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: Alert.tsx  BSTheme.tsx  Button.tsx  Card.tsx  DatabaseTableProps.ts  DismissibleAlert.tsx  ListCard.tsx  ListGroup.tsx  Modal.tsx  NavBar.tsx  Pagination.tsx  Placeholder.tsx  Popover.tsx  ProgressBar.tsx  Tabs.tsx  apiFetch.ts  spinner.tsx
frontend/src/components/authentication/: AuthContext.ts  AuthProvider.tsx  ProtectedRoute.tsx  useAuth.ts
frontend/src/pages/: Account.tsx  Bootstrap.tsx  Home.tsx  HttpTest.tsx  Login.tsx  NotFound.tsx  pagesList.ts
