[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
rocket_cors = "0.6.0"
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"]}
sqlx = { version = "0.6", features = ["runtime-async-std-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }