[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
rocket_cors = "0.6.0"
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"]}
sqlx = { version = "0.8.1", features = ["runtime-async-std-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
argon2 = "0.5.3"
password-hash = "0.5"
regex = "1.11.1"
rand = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10.9"
hex = "0.4.3"
jsonwebtoken = "9.3.1"